tests/prsl/fixtures/valid/empty-blocks.prsl
begin-record
record empty-blocks {
  content : "with empty blocks";
  temporal-metadata {};
  epistemic-metadata {};
}
end-record
---
