tests/prsl/fixtures/invalid/duplicate-field.prsl
begin-record
record dup-field {
  content : "x";
  temporal-metadata {
    created-at : "2024-01-01T00:00:00Z";
    created-at : "2024-01-02T00:00:00Z";
  };
}
end-record
---
